@@ -393,7 +393,10 @@ int Sys_mkdir (const char *path, qboolean crash)
 	if (rc != 0 && errno == EEXIST)
 		rc = 0;
 	if (rc != 0 && crash)
-		Sys_Error("Unable to create directory %s", path);
+	{
+		rc = errno;
+		Sys_Error("Unable to create directory %s: %s", path, strerror(rc));
+	}
 	return rc;
 }
 
